--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#97590C"
+    android:onClick="consultarDatos"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/bt_FICHAR"
-        android:layout_width="131dp"
-        android:layout_height="53dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:background="#A81111"
         android:backgroundTint="#970C0C"
         android:onClick="obtenerHora"
@@ -22,11 +23,23 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="222dp"
-        android:layout_height="84dp"
+        android:layout_width="368dp"
+        android:layout_height="82dp"
         app:layout_constraintBottom_toTopOf="@+id/bt_FICHAR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/botonConsulta"
+        android:layout_width="140dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="44dp"
+        android:onClick="consultarDatos"
+        android:text="Consultar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_FICHAR" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
